fixed blurry snake issue

--- a/snake.css
+++ b/snake.css
@@ -1,5 +1,5 @@
 .canvas {
-    width: 1000px;
-    height: 1000px;
+    /* width: 1000px;
+    height: 1000px; */
     border: 1px solid #000;
 }
